--- a/bio.html
+++ b/bio.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <title>Savvy Coders Jan. 2020 Cohort</title>
+    <title>Savvy Coders JavaScript Fullstack Cohort</title>
     <link rel="stylesheet" href="style.css" />
     <link
       rel="stylesheet"
@@ -21,7 +21,7 @@
   </head>
   <body>
     <header>
-      <h1>Example SPA</h1>
+      <h1>SavvyCoders Example SPA</h1>
     </header>
     <nav>
       <i class="fas fa-bars"></i>
@@ -65,7 +65,7 @@
       </p>
     </section>
     <footer>
-      &copy; 2020 <a href="https://savvycoders.com/">Savvy Coders</a>
+      &copy; 2021 <a href="https://savvycoders.com/">Savvy Coders</a>
     </footer>
     <script src="index.js"></script>
   </body>
